# ros2-ament-interface-dependencies

base_msgs/: CMakeLists.txt  package.xml
my_interfaces/: CMakeLists.txt  package.xml
my_interfaces/msg/: MyMsgType.msg
my_nodes/: CMakeLists.txt  package.xml
my_nodes/src/: node.cpp
