<?xml version="1.0" encoding='utf-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>base_msgs</name>
  <version>1.0.0</version>
  <description>
    Base ROS messages for emphasizing an ament dependency bug
  </description>
  <maintainer email="charles.lesire@onera.fr">Charles Lesire</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
