<?xml version="1.0" encoding='utf-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>my_nodes</name>
  <version>1.0.0</version>
  <description>
    Custom ROS nodes for emphasizing an ament dependency bug
  </description>
  <maintainer email="charles.lesire@onera.fr">Charles Lesire</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>my_interfaces</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
